--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -30,7 +30,7 @@
         justify-content: center;
         width: 15%;
         position: relative;
-        margin-left: -1%;
+        margin-left: -1.5%;
     }
 
     .main-right-top-search i {
@@ -57,13 +57,12 @@
         outline: none;
     }
 
-
     .main-right-top-notification {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 50%;
-        margin-right: -1%;
+        margin-left: 52.5%;
+        margin-right: 0;
     }
 
     .dot {
@@ -103,7 +102,6 @@
     .notification_popup h1 {
         font-size: 19px;
         letter-spacing: 0.001rem;
-        margin-bottom: 13px;
         margin-top: 5px;
         margin-left: 8px;
     }
@@ -116,13 +114,41 @@
     }
 
     .notification {
-        height: 43px !important;
+        height: 38px !important;
         margin-top: 10px;
         display: flex;
         align-items: center;
         padding-left: 10px;
         font-size: 14px;
         cursor: pointer;
+    }
+
+    .mark_as_read {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+
+    .notification_cont {
+        overflow: scroll;
+        max-height: 150px;
+    }
+
+    .mark_as_read button {
+        margin-top: 2px;
+        font-size: 13px;
+        text-align: center;
+        margin-top: 4px;
+        font-weight: 700;
+        border: none;
+        background-color: none !important;
+        background: none;
+        cursor: pointer !important;
+    }
+
+    .mark_as_read .bx {
+        font-size: 26px;
     }
 
     .notification:hover {
