--- a/public/css/Component/CenterManager/CenterManager_Stock_Releases.css
+++ b/public/css/Component/CenterManager/CenterManager_Stock_Releases.css
@@ -217,7 +217,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-right: 20px;
+        margin-right: 25px;
         cursor: pointer;
     }
 
@@ -251,13 +251,13 @@
     }
 
     .table-header {
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 20% ;
+        grid-template-columns: 25% 25% 20% 30% ;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 20% ;
+        grid-template-columns: 25% 25% 20% 30% ;
     }
 
     .table td {
@@ -330,6 +330,106 @@
 
     .main-right-bottom-two-content button:hover {
         background: rgb(28, 79, 64);
+    }
+
+    /*Release garbage details popup*/
+     .release_garbage_details_popup {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: var(--background-color-main);
+        width: 47%;
+        height: 40%;
+    }
+
+    .release_garbage_details_popup.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .release_garbage_details_popup img {
+        width: 20px;
+        height: 20px;
+        margin-left: 95%;
+        margin-top: 1%;
+        cursor: pointer;
+    }
+
+    .release_garbage_details_popup h1 {
+        font-size: 21px;
+        letter-spacing: 0.01rem;
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+
+    /* .release_garbage_details_popup h1::before{
+        content: '';
+        position: absolute;
+        margin-top: 26px;
+        margin-bottom: 25px;
+        height: 3px;
+        width: 64px;
+        margin-left: 14%;
+        background: var(--green-color-one);
+
+    } */
+
+    .release_garbage_details_popup h2 {
+        font-size: 14px;
+        margin-top: 5px;
+        font-weight: 500;
+        
+
+    }
+
+    .Eco_Credit_Per_Cont {
+        display: flex;
+    }
+
+    .Eco_Credit_Per_Cont .Cont {
+        display: flex;
+        flex-direction: column;
+        margin: 30px;
+        align-items: center;
+    }
+
+    .Eco_Credit_Per_Cont .Cont h3 {
+        font-size: 15px;
+        margin-bottom: 15px;
+        font-weight: 500;
+    }
+
+    .Eco_Credit_Per_Cont .Cont p {
+        font-size: 14px;
+    }
+
+    .Eco_Credit_Per_Cont .Cont .fas {
+        font-size: 29px;
+        margin-bottom: 15px;
+        color: #7c7c7d;
+     
+
+    }
+
+
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
     }
 
 
