--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -126,7 +126,7 @@
 
     /*cancel confirm popup*/
     .cancel-confirm {
-        display: none;
+        /* display: none;
         position: fixed;
         top: 0;
         left: 0;
@@ -137,7 +137,21 @@
         z-index: 2;
         transition: transform 0.4s ease-in, background-color 0.4s ease-in;
         align-items: center;
+        justify-content: center; */
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
         justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: #333;
     }
 
     .cancel-confirm.active {
