--- a/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
@@ -115,6 +115,155 @@
 
     /*cancel confirm*/
     .cancel-confirm {
+        /* display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        align-items: center;
+        justify-content: center; */
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: #333;
+    }
+
+    .cancel-confirm.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    .cancel-confirm-content {
+        width: 500px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        padding:30px;
+        position: relative;
+        color: var(--main-text-color);
+        transition: transform 0.4s, top 0.4s;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .confirm-content-img{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        cursor: pointer;
+
+    }
+
+    /* .cancel-confirm-content input {
+        width: 70%;
+        height: 40px;
+        margin-bottom: 10px;
+        margin-top: 12px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 5px;
+        border: 1px solid black;
+    } */
+
+    .cancel-confirm-content input {
+        height: 60px;
+        width: 97.5%;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 10px;
+        margin: 12px 0;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
+    }
+
+    .cancel-confirm-content input:focus {
+        border-color: var(--green-color-one);
+        outline: none;
+    }
+
+    .cancel-confirm-content h1 {
+
+        font-size: 15px;
+        font-weight: 500;
+    }
+
+    .confim-cancel-content-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    .cancel-confirm-button-container{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center ;
+    }
+
+    .cancel-reason-submit-button {
+        width: 20%;
+        height: 32px;
+        font-size: 14px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin-top: 10px;
+        background-color: rgb(220, 39, 39);
+        cursor: pointer;
+        color: white;
+    }
+
+    
+    .cancel-reason-submit-button:hover{
+        background: #c62323;
+    }
+
+    .cancel-reason-cancel-button{
+        width: 20%;
+        height: 32px;
+        font-size: 14px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin-left: 10px;
+        margin-top: 10px;
+        background-color: #bab3b3;
+        cursor: pointer;
+        color: white;
+    }
+
+    .cancel-reason-cancel-button:hover{
+        background: #a7a1a1;
+    }
+
+
+   
+
+    /*cancel confirm*/
+    /* .cancel-confirm {
         display: none;
         position: fixed;
         top: 0;
@@ -195,7 +344,7 @@
 
     .cancel-confirm-top-close img {
         cursor: pointer;
-    }
+    } */
 
     /**/
     .personal-details-popup-box {
@@ -354,78 +503,6 @@
 
     /* ----------- */
 
-    /*request details*/
-    /* .request-details-pop {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-    }
-
-    .request-details-pop-form {
-        width: 45%;
-        background: white;
-        border-radius: 6px;
-        top: 0;
-        position: relative;
-        text-align: center;
-        padding: 30px;
-        color: #333;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.4s, top 0.4s;
-        flex-direction: column;
-
-    }
-
-    .request-details-pop-form-top {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 25px;
-        font-size: 18px;
-    }
-
-    .request-details-pop-form-close {
-        width: 25px;
-        height: 25px;
-        margin-left: 100%;
-        margin-top: -3%;
-        cursor: pointer;
-    }
-
-    .request-details-topic {
-        display: flex;
-    }
-
-    .request-details-pop-form-content {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        width: 80%;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 6px;
-
-    }
-
-    .request-details-topic::before {
-        content: '';
-        position: absolute;
-        margin-top: 23px;
-        margin-left: 45px;
-        margin-bottom: 15px;
-        height: 4px;
-        width: 67px;
-        background: #1B6652;
-
-    } */
      /*request details*/
      .request-details-pop {
         /* position: fixed;
@@ -443,7 +520,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(0);
-        z-index: 4;
+        z-index: 3;
         align-items: center;
         justify-content: center;
         flex-direction: column;
@@ -519,7 +596,7 @@
         margin-bottom: 15px;
         height: 4px;
         width: 67px;
-        background: #1B6652;
+        background: var(--green-color-one);
 
     }
 
