--- a/public/css/Component/CenterManager/CenterManager_Request_Cancelled.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Cancelled.css
@@ -69,28 +69,37 @@
         width: 25px;
     }
 
+   
+
+    /*Location popup*/
     .location_pop {
-        display: none;
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
+
+    .location_pop.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .location_pop_content {
-        width: 47%;
-        height: 55%;
+        width: 700px;
         padding: 10px;
         background-color: #f1f2f6;
         border-radius: 10px;
         padding: 20px;
         padding-bottom: 40px;
+        height: 350px;
+        overflow: hidden;
     }
 
     .location_pop_map {
@@ -108,43 +117,57 @@
 
     .location_close button {
         background-color: #ff4757;
-        height: 28px;
         color: #fff;
         cursor: pointer;
         border: none;
         font-size: 16px;
         border-radius: 5px;
         width: 85px;
+        height: 28px;
     }
+
+    
 
     /*request details*/
     .request-details-pop {
+        
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: none;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 3;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: #333;
+       
+    }
+
+    .request-details-pop.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .request-details-pop-form {
-        width: 45%;
+        width: 500px;
         background: white;
         border-radius: 6px;
         top: 0;
         position: relative;
         text-align: center;
-        padding: 30px;
+        padding: 20px;
         color: #333;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: transform 0.4s, top 0.4s;
         flex-direction: column;
+
     }
 
     .request-details-pop-form-top {
@@ -158,8 +181,11 @@
     .request-details-pop-form-close {
         width: 25px;
         height: 25px;
-        margin-left: 100%;
-        margin-top: -3%;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
         cursor: pointer;
     }
 
@@ -170,10 +196,12 @@
     .request-details-pop-form-content {
         display: grid;
         grid-template-columns: 30% 70%;
-        width: 80%;
+        width: 95%;
         background-color: white;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         border-radius: 6px;
+        margin-bottom: 10px;
+
     }
 
     .request-details-topic::before {
@@ -184,41 +212,45 @@
         margin-bottom: 15px;
         height: 4px;
         width: 67px;
-        background: #1B6652;
+        background: var(--green-color-one);
+
     }
 
-    .personal-details-right-labels {
+    .request-details-right-labels {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding-top: 40px;
+        padding-left: 40px;
         padding-bottom: 50px;
-        padding-left: 25px;
+       
     }
 
-    .personal-details-right-labels span {
+    .request-details-right-labels span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #7c7c7d;
     }
 
-    .personal-details-right-values {
+    .request-details-right-values {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding-top: 40px;
+        padding-left: 90px;
         padding-bottom: 50px;
-        padding-left: 32px;
+       
     }
 
-    .personal-details-right-values span {
+    .request-details-right-values span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #767e95;
         font-weight: 550;
     }
+
 
     /* ------------*/
 
