--- a/public/css/Component/CenterManager/CenterManager_Request_Completed.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Completed.css
@@ -55,7 +55,7 @@
 
     .table-row {
         height: 55px;
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+        grid-template-columns: 11% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 14%;
     }
 
     .table td {
@@ -63,7 +63,7 @@
     }
 
     .table-header {
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+        grid-template-columns: 11% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 14% ;
     }
 
     td img {
@@ -71,6 +71,14 @@
         height: 25px;
         width: 25px;
     }
+
+    .collector_img {
+        width: 35px !important;
+        height: 35px !important;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
 
     /*Location popup*/
     .location_pop {
