--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -966,9 +966,20 @@
 
     }
 
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
     /*Vehicle details popup*/
     .vehicle-details-popup-box {
-        position: fixed;
+        /* position: fixed;
         top: 0;
         left: 0;
         background-color: rgba(0, 0, 0, 0.1);
@@ -978,12 +989,35 @@
         justify-content: center;
         width: 100%;
         height: 100%;
-        display: none;
+        display: none; */
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: var(--main-text-color);
+
+
 
     }
 
+    .vehicle-details-popup-box.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+
+
     .vehicle-details-popup-form {
-        width: 30%;
+        width: 450px;
         background: white;
         border-radius: 6px;
         position: relative;
