--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -473,42 +473,12 @@
         border-radius: 10px;
         background-color: var(--background-color-main);
         box-shadow: var(--box-shadow);
-    }
-
-    .main-right-bottom-three-left h1 {
-        font-size: 18px;
-        margin-bottom: 4%;
-        padding-left: 7%;
-        padding-top: 2%;
-    }
-
-    .main-right-bottom-three-left-cont {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        margin-bottom: 3%;
-        padding-left: 7%;
-    }
-
-    .main-right-bottom-three-left-cont img {
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        margin-right: 15px;
-    }
-
-    .main-right-bottom-three-left-cont h3 {
-        font-size: 15px;
-        width: 250px;
-        margin-left: -14%;
-    }
-
-    .main-right-bottom-three-left-cont h2 {
-        font-size: 18px;
-        color: var(--green-color-one);
-        width: 175px;
-
+        justify-content: center;
+        box-sizing: border-box;
+        padding: 15px;
+        
     }
 
     .main-right-bottom-three-right {
